--- a/pom.xml
+++ b/pom.xml
@@ -10,21 +10,27 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>demo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
-	<url/>
+	<version>1.0.0</version>
+	<name>Spring Boot CRUD Demo</name>
+	<description>A complete Spring Boot CRUD application example with MyBatis and MySQL</description>
+	<url>https://github.com/example/spring-boot-crud-demo</url>
 	<licenses>
-		<license/>
+		<license>
+			<name>MIT License</name>
+			<url>https://opensource.org/licenses/MIT</url>
+		</license>
 	</licenses>
 	<developers>
-		<developer/>
+		<developer>
+			<name>Developer</name>
+			<email>developer@example.com</email>
+		</developer>
 	</developers>
 	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
+		<connection>scm:git:https://github.com/example/spring-boot-crud-demo.git</connection>
+		<developerConnection>scm:git:https://github.com/example/spring-boot-crud-demo.git</developerConnection>
+		<tag>v1.0.0</tag>
+		<url>https://github.com/example/spring-boot-crud-demo</url>
 	</scm>
 	<properties>
 		<java.version>17</java.version>
